src/test/deca/syntax/valid/classe_simple.deca
// Description:
//    on test extends
//
// Resultats:
//   ok

class B {
  int x = 2;

  int testMethod(int x){
    x = x + 2;
    return x;
  }
}
