src/test/deca/syntax/invalid/mauvais_decl_field_1.deca
// Description:
//    on initialise mal un champ
//
// Resultats:
//   ok

class A {
	int a = 3 = 2;
	
}